# multi_array.print

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  algs.hpp  run.cpp
